2012-08-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* initial release v0.1