@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2012 ActiveState Software Inc. Rewrite of original.
 #
-# RCS: @(#) $Id: listentry.tcl,v 1.1 2012/08/28 05:05:34 andreas_kupries Exp $
+# RCS: @(#) $Id: listentry.tcl,v 1.2 2012/08/31 21:01:37 andreas_kupries Exp $
 
 # XXX TODO: Define a style for the whole megawidget (WidgetOrderedList)
 # XXX TODO: Ensure automatic definition of the style in all themes, on
@@ -1023,6 +1023,9 @@ snit::widget ::widget::listentry {
 	# ... link to widget, if present
 	if {![winfo exists $win.l]} return
 	$win.l configure -listvariable $value
+
+	# ... force revalidation of the entry (duplicate check status may change)
+	widget::validator validate $win.e
 	return
     }
 
